sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/emojirades/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: emojirades
    app.kubernetes.io/name: emojirades
  name: emojirades
  namespace: emojirades
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: emojirades
      app.kubernetes.io/name: emojirades
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: emojirades
        app.kubernetes.io/name: emojirades
    spec:
      containers:
        - image: ghcr.io/emojirades/emojirades:v1.15.0
          imagePullPolicy: IfNotPresent
          name: emojirades
          args:
            - "-vv"
            - "multiple"
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
